# proglangs_loskutyan

./: CMakeLists.txt  fw.cpp  main.cpp  resistance.py
